Server login get request